--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/navigation_journal"
-        android:name="com.freshyfive.reflect.ui.dailytasks.DailyTasksFragment"
+        android:name="com.freshyfive.reflect.ui.journal.JournalFragment"
         android:label="Journal"
         tools:layout="@layout/fragment_journal" />
 
