--- a/app/src/main/res/layout/activity_feeling.xml
+++ b/app/src/main/res/layout/activity_feeling.xml
@@ -71,6 +71,7 @@
                                     android:gravity="center"
                                     android:text="Sad"
                                     android:textSize="24sp"
+                                    android:onClick="setMood"
                                     app:layout_constraintBottom_toBottomOf="parent"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintStart_toStartOf="parent"
@@ -87,6 +88,7 @@
                                     android:gravity="center"
                                     android:text="Angry"
                                     android:textSize="24sp"
+                                    android:onClick="setMood"
                                     app:layout_constraintBottom_toBottomOf="parent"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintStart_toStartOf="parent"
@@ -119,6 +121,7 @@
                                     android:gravity="center"
                                     android:text="Depressed"
                                     android:textSize="24sp"
+                                    android:onClick="setMood"
                                     app:layout_constraintBottom_toBottomOf="parent"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintStart_toStartOf="parent"
@@ -135,6 +138,7 @@
                                     android:gravity="center"
                                     android:text="Worried"
                                     android:textSize="24sp"
+                                    android:onClick="setMood"
                                     app:layout_constraintBottom_toBottomOf="parent"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintStart_toStartOf="parent"
@@ -167,6 +171,7 @@
                                     android:gravity="center"
                                     android:text="Frustrated"
                                     android:textSize="24sp"
+                                    android:onClick="setMood"
                                     app:layout_constraintBottom_toBottomOf="parent"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintStart_toStartOf="parent"
@@ -183,6 +188,7 @@
                                     android:gravity="center"
                                     android:text="Anxious"
                                     android:textSize="24sp"
+                                    android:onClick="setMood"
                                     app:layout_constraintBottom_toBottomOf="parent"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintStart_toStartOf="parent"
