--- a/app/src/main/res/layout/fragment_daily_tasks.xml
+++ b/app/src/main/res/layout/fragment_daily_tasks.xml
@@ -4,11 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.dailytasks.DailyTasksFragment">
+    tools:context=".ui.dailytasks.DailyTasksFragment"
+    android:padding="15dp">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/dailyTasksView"/>
+        android:id="@+id/dailyTasksView"
+        android:padding="15dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
