--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:paddingTop="25dp">
+
+
 
     <LinearLayout
-        android:layout_width="380dp"
-        android:layout_height="691dp"
+        android:layout_width="339dp"
+        android:layout_height="655dp"
         android:orientation="vertical"
-        android:padding="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.487"
@@ -20,14 +24,15 @@
 
         <TextView
             android:id="@+id/text_home"
-            android:layout_width="339dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/rounded_corner"
+            android:paddingLeft="15dp"
             android:text="\tHello\n\tXYZ"
             android:textAlignment="textStart"
-            android:textSize="38sp"
+            android:textSize="35sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -42,6 +47,7 @@
             android:layout_marginTop="25dp"
             android:background="@drawable/rounded_corner"
             android:orientation="vertical"
+            android:paddingLeft="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.457"
@@ -55,7 +61,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:text="\tQuote :"
-                android:textSize="38sp"
+                android:textSize="35sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -72,6 +78,7 @@
             android:layout_marginTop="25dp"
             android:background="@drawable/rounded_corner"
             android:orientation="vertical"
+            android:paddingLeft="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.457"
@@ -85,7 +92,7 @@
                 android:layout_height="61dp"
                 android:layout_marginTop="15dp"
                 android:text="\tDaily Tip :"
-                android:textSize="38sp"
+                android:textSize="35sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -98,7 +105,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="148dp"
+            android:layout_height="161dp"
             android:layout_marginTop="25dp"
             android:background="@drawable/rounded_corner"
             android:orientation="vertical"
