--- a/app/src/main/res/layout/grid_item_layout.xml
+++ b/app/src/main/res/layout/grid_item_layout.xml
@@ -4,7 +4,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:elevation="10dp"
+    android:layout_margin="10dp">
 
     <LinearLayout
     android:layout_width="wrap_content"
@@ -24,10 +26,10 @@
 
         <TextView
             android:id="@+id/journalCreatedDate"
-            android:text="16 Jan"
-            android:layout_gravity="center"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="16 Jan" />
 
     </LinearLayout>
     </androidx.cardview.widget.CardView>
