--- a/app/src/main/res/layout/article_items.xml
+++ b/app/src/main/res/layout/article_items.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <?xml version="1.0" encoding="utf-8"?>
 
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -32,7 +31,7 @@
         android:layout_marginTop="15dp"
         android:padding="15dp"
         android:layout_height="589dp"
-        android:text="Article Heading"
+        android:text="Article Content"
         android:textColor="#000000"
         android:textSize="20sp" />
 
