--- a/app/src/main/res/layout/books_items.xml
+++ b/app/src/main/res/layout/books_items.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="match_parent">-->
 
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="16dp">
 
     <TextView
-        android:id="@+id/Book1"
+        android:id="@+id/BookName"
         android:layout_width="354dp"
         android:layout_height="215dp"
         android:layout_gravity="center"
@@ -23,32 +23,6 @@
         android:textColor="#000000"
         android:textSize="28sp" />
 
-    <TextView
-        android:id="@+id/Book2"
-        android:layout_width="354dp"
-        android:layout_height="215dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="15dp"
-        android:background="@drawable/rounded_corner"
-        android:gravity="center"
-        android:padding="15dp"
-        android:text="Book2\nAuthor2"
-        android:textColor="#000000"
-        android:textSize="28sp" />
-
-    <TextView
-        android:id="@+id/Book3"
-        android:layout_width="354dp"
-        android:layout_height="215dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="15dp"
-        android:background="@drawable/rounded_corner"
-        android:gravity="center"
-        android:padding="15dp"
-        android:text="Book3\nAuthor3"
-        android:textColor="#000000"
-        android:textSize="28sp" />
-
 </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
 
