--- a/app/src/main/res/layout/music_items.xml
+++ b/app/src/main/res/layout/music_items.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="match_parent">-->
 
 
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="16dp">
 
         <TextView
-            android:id="@+id/Music1"
+            android:id="@+id/MusicName"
             android:layout_width="354dp"
             android:layout_height="215dp"
             android:layout_gravity="center"
@@ -24,34 +24,9 @@
             android:textColor="#000000"
             android:textSize="28sp" />
 
-        <TextView
-            android:id="@+id/Music2"
-            android:layout_width="354dp"
-            android:layout_height="215dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="15dp"
-            android:background="@drawable/rounded_corner"
-            android:gravity="center"
-            android:padding="15dp"
-            android:text="Music2\n-by Artist"
-            android:textColor="#000000"
-            android:textSize="28sp" />
-
-        <TextView
-            android:id="@+id/Music3"
-            android:layout_width="354dp"
-            android:layout_height="215dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="15dp"
-            android:background="@drawable/rounded_corner"
-            android:gravity="center"
-            android:padding="15dp"
-            android:text="Music3\n-by Artist"
-            android:textColor="#000000"
-            android:textSize="28sp" />
 
     </LinearLayout>
 
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
