--- a/app/src/main/res/layout/fragment_recommendations.xml
+++ b/app/src/main/res/layout/fragment_recommendations.xml
@@ -22,6 +22,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.498"> <!-- Apply the border drawable here -->
         <TextView
+            android:id="@+id/ArticlesTab"
             android:layout_width="match_parent"
             android:layout_height="87dp"
             android:layout_gravity="center"
@@ -32,6 +33,7 @@
             android:text="Articles" />
 
         <TextView
+            android:id="@+id/BooksTab"
             android:layout_width="match_parent"
             android:layout_height="95dp"
             android:layout_gravity="center"
@@ -41,6 +43,7 @@
             android:text="Books" />
 
         <TextView
+            android:id="@+id/MoviesTab"
             android:layout_width="match_parent"
             android:layout_height="95dp"
             android:layout_gravity="center"
@@ -50,6 +53,7 @@
             android:text="Movies" />
 
         <TextView
+            android:id="@+id/MusicTab"
             android:layout_width="match_parent"
             android:layout_height="92dp"
             android:layout_gravity="center"
@@ -59,6 +63,7 @@
             android:text="Music" />
 
         <TextView
+            android:id="@+id/ShortFilmTab"
             android:layout_width="match_parent"
             android:layout_height="99dp"
             android:layout_gravity="center"
