--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,12 +3,12 @@
 
     <item
         android:id="@+id/navigation_journal"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/journal_icon"
         android:title="Journal" />
 
     <item
         android:id="@+id/navigation_daily_tasks"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/tasks_icon"
         android:title="Daily Tasks" />
 
     <item
@@ -20,12 +20,12 @@
 
     <item
         android:id="@+id/navigation_recommendations"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/reco_icon"
         android:title="Recommendations" />
 
     <item
         android:id="@+id/navigation_settings"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/settings_icon"
         android:title="Settings" />
 
 </menu>
