--- a/app/src/main/res/layout/fragment_journal.xml
+++ b/app/src/main/res/layout/fragment_journal.xml
@@ -5,17 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="15dp"
     tools:context=".ui.journal.JournalFragment">
 
     <ImageView
         android:id="@+id/backgroundImageViewJournal"
-        android:layout_width="411dp"
+        android:layout_width="0dp"
         android:layout_height="753dp"
         android:scaleType="fitXY"
         android:src="@drawable/journal"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="-14dp" /> <!-- Replace with your image resource -->
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" /> <!-- Replace with your image resource -->
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/journalRecyclerView"
