--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,148 +1,146 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
 
+    <ImageView
+        android:id="@+id/backgroundImageViewHome"
+        android:layout_width="0dp"
+        android:layout_height="743dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/home"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" /> <!-- Replace with your image resource -->
 
-        <ImageView
-            android:id="@+id/backgroundImageViewHome"
+
+    <LinearLayout
+        android:id="@+id/linearLayout4"
+        android:layout_width="339dp"
+        android:layout_height="670dp"
+        android:orientation="vertical"
+        android:paddingLeft="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.487"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.307">
+
+
+        <TextView
+            android:id="@+id/text_home"
             android:layout_width="match_parent"
-            android:layout_height="743dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/home" /> <!-- Replace with your image resource -->
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/rounded_corner"
+            android:paddingLeft="15dp"
+            android:text="\tHello\n\tXYZ"
+            android:textAlignment="textStart"
+            android:textSize="35sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
 
         <LinearLayout
-            android:layout_width="339dp"
-            android:layout_height="670dp"
+            android:layout_width="match_parent"
+            android:layout_height="162dp"
+            android:layout_marginTop="25dp"
+            android:background="@drawable/rounded_corner"
             android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:paddingLeft="15dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.487"
+            app:layout_constraintHorizontal_bias="0.457"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.307">
-
+            app:layout_constraintVertical_bias="0.498">
 
 
             <TextView
-                android:id="@+id/text_home"
-                android:layout_width="match_parent"
+                android:id="@+id/Quotes"
+                android:layout_width="324dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:background="@drawable/rounded_corner"
-                android:paddingLeft="15dp"
-                android:text="\tHello\n\tXYZ"
-                android:textAlignment="textStart"
+                android:layout_marginTop="15dp"
+                android:text="\tQuote :"
                 android:textSize="35sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0" />
+                android:textStyle="bold" />
 
+            <TextView
+                android:id="@+id/Daily_Quotes"
+                android:layout_width="336dp"
+                android:layout_height="61dp"
+                android:text="\tDaily_Quote here"
+                android:textSize="28sp" />
 
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="162dp"
-                android:layout_marginTop="25dp"
-                android:background="@drawable/rounded_corner"
-                android:orientation="vertical"
-                android:paddingLeft="15dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.457"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.498">
-
-
-
-                <TextView
-                    android:id="@+id/Quotes"
-                    android:layout_width="324dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
-                    android:text="\tQuote :"
-                    android:textSize="35sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/Daily_Quotes"
-                    android:layout_width="336dp"
-                    android:layout_height="61dp"
-                    android:text="\tDaily_Quote here"
-                    android:textSize="28sp" />
-
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="162dp"
-                android:layout_marginTop="25dp"
-                android:background="@drawable/rounded_corner"
-                android:orientation="vertical"
-                android:paddingLeft="15dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.457"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.498">
-
-                <TextView
-                    android:id="@+id/Daily_Tip"
-                    android:layout_width="336dp"
-                    android:layout_height="61dp"
-                    android:layout_marginTop="15dp"
-                    android:text="\tDaily Tip :"
-                    android:textSize="35sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/Tip"
-                    android:layout_width="336dp"
-                    android:layout_height="61dp"
-                    android:text="\tWrite Tip Here"
-                    android:textSize="28sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="161dp"
-                android:layout_marginTop="25dp"
-                android:background="@drawable/rounded_corner"
-                android:orientation="vertical"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.457"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.498">
-
-                <TextView
-                    android:id="@+id/Monthly_Activity"
-                    android:layout_width="336dp"
-                    android:layout_height="61dp"
-                    android:layout_marginTop="15dp"
-                    android:text="\tYour Monthly Activity :"
-                    android:textSize="28sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
 
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="162dp"
+            android:layout_marginTop="25dp"
+            android:background="@drawable/rounded_corner"
+            android:orientation="vertical"
+            android:paddingLeft="15dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.457"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.498">
+
+            <TextView
+                android:id="@+id/Daily_Tip"
+                android:layout_width="336dp"
+                android:layout_height="61dp"
+                android:layout_marginTop="15dp"
+                android:text="\tDaily Tip :"
+                android:textSize="35sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/Tip"
+                android:layout_width="336dp"
+                android:layout_height="61dp"
+                android:text="\tWrite Tip Here"
+                android:textSize="28sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="161dp"
+            android:layout_marginTop="25dp"
+            android:background="@drawable/rounded_corner"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.457"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.498">
+
+            <TextView
+                android:id="@+id/Monthly_Activity"
+                android:layout_width="336dp"
+                android:layout_height="61dp"
+                android:layout_marginTop="15dp"
+                android:text="\tYour Monthly Activity :"
+                android:textSize="28sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
