--- a/app/src/main/res/layout/task_item_layout.xml
+++ b/app/src/main/res/layout/task_item_layout.xml
@@ -16,6 +16,7 @@
 
             <TextView
                 android:id="@+id/taskName"
+                android:layout_weight="5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -23,12 +24,12 @@
                 android:layout_gravity="center"
                 android:text="Task Name" />
 
-            <TextView
-                android:id="@+id/isCompleted"
-                android:text="false"
-                android:layout_gravity="center"
+            <Button
+                android:id="@+id/doneBtn"
+                android:layout_weight="1"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:text="Done" />
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
