--- a/app/src/main/res/layout/activity_movies_items.xml
+++ b/app/src/main/res/layout/activity_movies_items.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginTop="55dp">
+    <ImageView
+        android:id="@+id/backgroundImageViewRecommendationsItemsMovies"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"
+        android:src="@drawable/newjournal" /> <!-- Replace with your image resource -->
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/MoviesRecyclerView"
